@@ -1,0 +1,8 @@
+<header>Command to run after making changes to a reseller</header>
+
+This option can be used to specify a script or command to be run after
+a reseller is created, modified or deleted. It can make use of the
+environment variables RESELLER_NAME and RESELLER_ACTION to determine
+which reseller is being changed and what is happening to it. <p>
+
+<footer>
