@@ -1451,3 +1451,4 @@ DKIM keys can now be set on a domain by domain basis, rather than all virtual se
 Fixed support for the Options directive in Apache 2.4.
 ---- Changes since 4.08 ----
 Updated the phpMyAdmin script installer to version 4.2.2, Revive Adserver to 3.0.5, Magento to 1.9.0.1, Instiki to 0.19.7, TikiWiki to 12.2, FengOffice to 2.6.1, PiWik to 2.3.0, MediaWiki to 1.22.7 and 1.19.16, and Django to 1.6.5 and 1.4.13.
+Added Virtualmin configuration options for commands to run before and after a reseller is created, modified or deleted.
